Made a fully distributable archive with embedded JRE